--- a/crates/dev_container/Cargo.toml
+++ b/crates/dev_container/Cargo.toml
@@ -6,7 +6,7 @@ edition.workspace = true
 
 [dependencies]
 serde.workspace = true
-serde_json.workspace = true
+serde_json_lenient.workspace = true
 http_client.workspace = true
 http.workspace = true
 gpui.workspace = true
