--- a/crates/gpui_platform/Cargo.toml
+++ b/crates/gpui_platform/Cargo.toml
@@ -17,3 +17,6 @@ test-support = ["gpui/test-support"]
 
 [dependencies]
 gpui.workspace = true
+
+[target.'cfg(target_os = "windows")'.dependencies]
+gpui_windows.workspace = true
