--- a/crates/gpui_platform/Cargo.toml
+++ b/crates/gpui_platform/Cargo.toml
@@ -18,5 +18,8 @@ test-support = ["gpui/test-support"]
 [dependencies]
 gpui.workspace = true
 
+[target.'cfg(target_os = "macos")'.dependencies]
+gpui_macos.workspace = true
+
 [target.'cfg(target_os = "windows")'.dependencies]
 gpui_windows.workspace = true
