--- a/crates/zed/Cargo.toml
+++ b/crates/zed/Cargo.toml
@@ -15,7 +15,7 @@ workspace = true
 tracy = ["ztracing/tracy"]
 test-support = [
     "gpui/test-support",
-    "gpui/screen-capture",
+    "gpui_platform/screen-capture",
     "dep:image",
     "dep:semver",
     "workspace/test-support",
@@ -29,7 +29,7 @@ test-support = [
 ]
 visual-tests = [
     "gpui/test-support",
-    "gpui/screen-capture",
+    "gpui_platform/screen-capture",
     "dep:image",
     "dep:semver",
     "dep:tempfile",
@@ -121,6 +121,7 @@ gpui = { workspace = true, features = [
     "x11",
     "font-kit",
 ] }
+gpui_platform = {workspace = true, features=["screen-capture"]}
 image = { workspace = true, optional = true }
 semver = { workspace = true, optional = true }
 tempfile = { workspace = true, optional = true }
@@ -241,7 +242,7 @@ ashpd.workspace = true
 call = { workspace = true, features = ["test-support"] }
 dap = { workspace = true, features = ["test-support"] }
 editor = { workspace = true, features = ["test-support"] }
-gpui = { workspace = true, features = ["test-support", "screen-capture"] }
+gpui = { workspace = true, features = ["test-support"] }
 image_viewer = { workspace = true, features = ["test-support"] }
 itertools.workspace = true
 language = { workspace = true, features = ["test-support"] }
