--- a/crates/gpui_platform/Cargo.toml
+++ b/crates/gpui_platform/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/gpui_platform.rs"
 
 [features]
 default = []
+font-kit = ["gpui_macos/font-kit"]
 test-support = ["gpui/test-support"]
 screen-capture = ["gpui/screen-capture", "gpui_macos/screen-capture", "gpui_windows/screen-capture"]
 
