--- a/crates/gpui_macos/Cargo.toml
+++ b/crates/gpui_macos/Cargo.toml
@@ -19,6 +19,9 @@ font-kit = ["dep:font-kit"]
 screen-capture = ["gpui/screen-capture"]
 
 [dependencies]
+gpui.workspace = true
+
+[target.'cfg(target_os = "macos")'.dependencies]
 anyhow.workspace = true
 async-task = "4.7"
 block = "0.1"
@@ -36,7 +39,6 @@ etagere = "0.2"
 font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "110523127440aefb11ce0cf280ae7c5071337ec5", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
 foreign-types = "0.5"
 futures.workspace = true
-gpui.workspace = true
 image.workspace = true
 itertools.workspace = true
 libc.workspace = true
@@ -54,7 +56,7 @@ strum.workspace = true
 util.workspace = true
 uuid.workspace = true
 
-[build-dependencies]
+[target.'cfg(target_os = "macos")'.build-dependencies]
 bindgen = "0.71"
 cbindgen = { version = "0.28.0", default-features = false }
 gpui.workspace = true
