Fix benchmark crates

--- a/crates/project_benchmarks/Cargo.toml
+++ b/crates/project_benchmarks/Cargo.toml
@@ -11,6 +11,7 @@ clap.workspace = true
 client.workspace = true
 futures.workspace = true
 gpui.workspace = true
+gpui_platform.workspace = true
 http_client = { workspace = true, features = ["test-support"]}
 language.workspace = true
 node_runtime.workspace = true
