--- a/crates/fs_benchmarks/Cargo.toml
+++ b/crates/fs_benchmarks/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 [dependencies]
 fs.workspace = true
 gpui.workspace = true
+gpui_platform.workspace = true
 
 [lints]
 workspace = true
