--- a/crates/remote_server/Cargo.toml
+++ b/crates/remote_server/Cargo.toml
@@ -39,6 +39,7 @@ git.workspace = true
 git_hosting_providers.workspace = true
 git2 = { workspace = true, features = ["vendored-libgit2"] }
 gpui.workspace = true
+gpui_platform.workspace = true
 gpui_tokio.workspace = true
 http_client.workspace = true
 image.workspace = true
