Fix component preview

--- a/crates/component_preview/Cargo.toml
+++ b/crates/component_preview/Cargo.toml
@@ -13,7 +13,6 @@ path = "src/component_preview.rs"
 
 [features]
 default = []
-preview = []
 test-support = ["db/test-support"]
 
 [dependencies]
@@ -40,9 +39,8 @@ uuid.workspace = true
 workspace.workspace = true
 
 [dev-dependencies]
-gpui_platform.workspace = true
+gpui_platform = { workspace = true, features = ["screen-capture"] }
 
 [[example]]
 name = "component_preview"
 path = "examples/component_preview.rs"
-required-features = ["preview"]
