a bunch of windows fixes

--- a/crates/gpui_windows/Cargo.toml
+++ b/crates/gpui_windows/Cargo.toml
@@ -25,7 +25,9 @@ anyhow.workspace = true
 collections.workspace = true
 etagere = "0.2"
 futures.workspace = true
+image.workspace = true
 itertools.workspace = true
+log.workspace = true
 parking_lot.workspace = true
 rand.workspace = true
 raw-window-handle = "0.6"
