--- a/crates/gpui_windows/Cargo.toml
+++ b/crates/gpui_windows/Cargo.toml
@@ -37,6 +37,7 @@ uuid.workspace = true
 windows.workspace = true
 windows-core.workspace = true
 windows-numerics = "0.2"
+windows-registry = "0.5"
 
 [target.'cfg(target_os = "windows")'.dependencies.scap]
 workspace = true
