--- a/crates/gpui/Cargo.toml
+++ b/crates/gpui/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["gui"]
 workspace = true
 
 [features]
-default = ["font-kit", "wayland", "x11", "windows-manifest"]
+default = ["font-kit", "wayland", "x11"]
 test-support = [
     "leak-detection",
     "collections/test-support",
@@ -65,7 +65,6 @@ x11 = [
 screen-capture = [
     "scap",
 ]
-windows-manifest = []
 
 [lib]
 path = "src/gpui.rs"
@@ -231,9 +230,6 @@ unicode-segmentation.workspace = true
 util = { workspace = true, features = ["test-support"] }
 
 
-
-[target.'cfg(target_os = "windows")'.build-dependencies]
-embed-resource = "3.0"
 
 [target.'cfg(target_os = "macos")'.build-dependencies]
 bindgen = "0.71"
