--- a/crates/gpui_platform/Cargo.toml
+++ b/crates/gpui_platform/Cargo.toml
@@ -15,7 +15,9 @@ path = "src/gpui_platform.rs"
 default = []
 font-kit = ["gpui_macos/font-kit"]
 test-support = ["gpui/test-support"]
-screen-capture = ["gpui/screen-capture", "gpui_macos/screen-capture", "gpui_windows/screen-capture"]
+screen-capture = ["gpui/screen-capture", "gpui_macos/screen-capture", "gpui_windows/screen-capture", "gpui_linux/screen-capture"]
+wayland = ["gpui_linux/wayland"]
+x11 = ["gpui_linux/x11"]
 
 [dependencies]
 gpui.workspace = true
@@ -25,3 +27,6 @@ gpui_macos.workspace = true
 
 [target.'cfg(target_os = "windows")'.dependencies]
 gpui_windows.workspace = true
+
+[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
+gpui_linux.workspace = true
