--- a/crates/gpui_linux/Cargo.toml
+++ b/crates/gpui_linux/Cargo.toml
@@ -50,20 +50,22 @@ screen-capture = [
     "scap",
 ]
 
-[dependencies]
-gpui.workspace = true
-gpui_wgpu = { workspace = true, optional = true }
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 anyhow.workspace = true
 collections.workspace = true
+futures.workspace = true
+gpui.workspace = true
+gpui_wgpu = { workspace = true, optional = true }
 http_client.workspace = true
+itertools.workspace = true
 libc.workspace = true
 log.workspace = true
 parking_lot.workspace = true
 profiling.workspace = true
 smallvec.workspace = true
 smol.workspace = true
+strum.workspace = true
 util.workspace = true
 uuid.workspace = true
 
