Fix linux build ig?

--- a/crates/gpui_linux/Cargo.toml
+++ b/crates/gpui_linux/Cargo.toml
@@ -53,6 +53,7 @@ screen-capture = [
 
 [target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
 anyhow.workspace = true
+bytemuck = "1"
 collections.workspace = true
 futures.workspace = true
 gpui.workspace = true
@@ -62,6 +63,7 @@ itertools.workspace = true
 libc.workspace = true
 log.workspace = true
 parking_lot.workspace = true
+pathfinder_geometry = "0.5"
 profiling.workspace = true
 smallvec.workspace = true
 smol.workspace = true
