--- a/crates/sidebar/Cargo.toml
+++ b/crates/sidebar/Cargo.toml
@@ -17,28 +17,12 @@ test-support = []
 
 [dependencies]
 acp_thread.workspace = true
-agent_ui.workspace = true
-chrono.workspace = true
-db.workspace = true
-fs.workspace = true
-fuzzy.workspace = true
-serde_json.workspace = true
+agent-client-protocol.workspace = true
 gpui.workspace = true
+log.workspace = true
 picker.workspace = true
-project.workspace = true
-recent_projects.workspace = true
 theme.workspace = true
 ui.workspace = true
 ui_input.workspace = true
 util.workspace = true
 workspace.workspace = true
-
-[dev-dependencies]
-editor.workspace = true
-feature_flags.workspace = true
-fs = { workspace = true, features = ["test-support"] }
-gpui = { workspace = true, features = ["test-support"] }
-project = { workspace = true, features = ["test-support"] }
-recent_projects = { workspace = true, features = ["test-support"] }
-settings = { workspace = true, features = ["test-support"] }
-workspace = { workspace = true, features = ["test-support"] }
